# routes/teacher-class-routes.js
@@ -1,10 +1,12 @@
 const express = require('express');
 const routes = express.Router();
 const { createClass, getClassesByTeacher, getStudentsByClass, removeStudentFromClass, profile } = require("../services/teacher-class-service")
+const authenticateToken = require("../middleware/authenticate");
 // ➕ Tạo lớp mới
-routes.post("/createClass", async (req, res) => {
+routes.post("/createClass", authenticateToken, async (req, res) => {
     try {
-        const { className, teacherId } = req.body;
+        const teacherId = req.user.id;
+        const { className } = req.body;
         console.log(req.body);
         const result = await createClass(className, teacherId);
         res.status(200).send({
@@ -22,26 +24,26 @@ routes.post("/createClass", async (req, res) => {
 });
 
 // 📋 Lấy danh sách lớp của giáo viên
-routes.get("/getClasses/:teacherId", async (req, res) => {
+routes.get("/getClasses", authenticateToken, async (req, res) => {
     try {
-        const { teacherId } = req.params;
-        const result = await getClassesByTeacher(teacherId);
-        res.status(200).send({
-            status: true,
-            message: "Lấy danh sách lớp thành công",
-            data: result
-        });
-    }
-    catch (error) {
-        res.status(500).send({
-            status: false,
-            message: error.message
-        });
-    }
+    const teacherId = req.user.id;
+    const result = await getClassesByTeacher(teacherId);
+    res.status(200).send({
+        status: true,
+        message: "Lấy danh sách lớp thành công",
+        data: result
+    });
+}
+catch (error) {
+    res.status(500).send({
+        status: false,
+        message: error.message
+    });
+}
 });
 
 // 📋 Lấy danh sách học sinh trong lớp  
-routes.get("/getStudentsInClass/:classId", async (req, res) => {
+routes.get("/getStudentsInClass/:classId", authenticateToken, async (req, res) => {
     try {
         const { classId } = req.params;
         const result = await getStudentsByClass(classId);
@@ -60,7 +62,7 @@ routes.get("/getStudentsInClass/:classId", async (req, res) => {
 });
 
 // ❌ Xóa học sinh khỏi lớp
-routes.delete("/deleteStudent", async (req, res) => {
+routes.delete("/deleteStudent", authenticateToken, async (req, res) => {
     try {
         const { classId, studentId } = req.body;
         const result = await removeStudentFromClass(classId, studentId);
@@ -77,9 +79,10 @@ routes.delete("/deleteStudent", async (req, res) => {
     }
 });
 
-routes.get("/profile/:teacherId", async (req, res) => {
+routes.get("/profile", authenticateToken, async (req, res) => {
     try {
-        const { teacherId } = req.params;
+        const teacherId = req.user.id;
+        console.log(teacherId);
         const result = await profile(teacherId);
         res.status(200).send({
             status: true,
